GUI-8582 fix z-index of codemirror suggest when menubar is popped out

--- a/assets/stylesheets/less/partials/worksheet.less
+++ b/assets/stylesheets/less/partials/worksheet.less
@@ -571,7 +571,9 @@ ul.CodeMirror-hints {
     }
 }
 
-
+.bottomMenuOut ~ ul.CodeMirror-hints {
+    z-index: @z-index-homeBtn + 2;
+}
 #fnBar, .fnBarClone {
     .size(@width: ~"calc(100% - 14px)", @height: 32px);
     margin-left: 4px;
